Updated Irish translation

--- a/po/ga.po
+++ b/po/ga.po
@@ -1,5 +1,6 @@
 # Irish translations for nautilus package.
 # Copyright (C) 2000-2009 Free Software Foundation, Inc.
+# This file is distributed under the same license as the nautilus package.
 # Alastair McKinstry <mckinstry@computer.org>, 2000.
 # Paul Duffy <dubhthach@frink.nuigalway.ie>, 2003.
 # Seán de Búrca <leftmostcat@gmail.com>, 2007-2009.
@@ -8,8 +9,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2009-07-31 02:30-0600\n"
-"PO-Revision-Date: 2009-07-31 03:53-0600\n"
+"POT-Creation-Date: 2009-08-06 17:27-0600\n"
+"PO-Revision-Date: 2009-08-06 17:58-0600\n"
 "Last-Translator: Seán de Búrca <leftmostcat@gmail.com>\n"
 "Language-Team: Irish <gaeilge-gnulinux@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
@@ -21,7 +22,7 @@ msgstr ""
 #: ../cut-n-paste-code/libegg/eggdesktopfile.c:165
 #, c-format
 msgid "File is not a valid .desktop file"
-msgstr ""
+msgstr "Ní comhad .desktop bailí é an comhad"
 
 #: ../cut-n-paste-code/libegg/eggdesktopfile.c:188
 #, c-format
@@ -31,7 +32,7 @@ msgstr ""
 #: ../cut-n-paste-code/libegg/eggdesktopfile.c:958
 #, c-format
 msgid "Starting %s"
-msgstr ""
+msgstr "%s á Thosú"
 
 #: ../cut-n-paste-code/libegg/eggdesktopfile.c:1100
 #, c-format
@@ -446,11 +447,11 @@ msgstr "An áit ar deireadh an rogha ón an cursor i chars."
 
 #: ../eel/eel-editable-label.c:3178
 msgid "Select All"
-msgstr "Roghnaigh gach rud"
+msgstr "Roghnaigh Gach Rud"
 
 #: ../eel/eel-editable-label.c:3189
 msgid "Input Methods"
-msgstr "Modhanna le haighaidh ionchur"
+msgstr "Modhanna Ionchurtha"
 
 #: ../eel/eel-gconf-extensions.c:83
 #, c-format
@@ -458,17 +459,17 @@ msgid ""
 "GConf error:\n"
 "  %s"
 msgstr ""
-"Earraidh GConf:\n"
+"Earráid GConf:\n"
 "  %s"
 
 #: ../eel/eel-gconf-extensions.c:87
 #, c-format
 msgid "GConf error: %s"
-msgstr "Earraidh GConf: %s"
+msgstr "Earráid GConf: %s"
 
 #: ../eel/eel-gconf-extensions.c:90
 msgid "All further errors shown only on terminal."
-msgstr "Beidh tú in an na earraidh eile a feachaint sa terminal"
+msgstr "Taispeánfar gach earráid eile sa teirminéal amháin."
 
 #: ../eel/eel-stock-dialogs.c:203
 msgid "You can stop this operation by clicking cancel."
@@ -476,7 +477,7 @@ msgstr ""
 
 #: ../eel/eel-vfs-extensions.c:92
 msgid " (invalid Unicode)"
-msgstr " (Unicód mícheart)"
+msgstr " (Unicode neamhbhailí)"
 
 #. Translators: date_modified - mtime, the last time file contents were changed
 #. date_changed  - ctime, the last time file meta-information changed
@@ -1243,7 +1244,7 @@ msgstr "Níor aimsíodh aon fheidhmchlár"
 
 #: ../libnautilus-private/nautilus-autorun.c:504
 msgid "Ask what to do"
-msgstr ""
+msgstr "Fiafraigh cad atá le déanamh"
 
 #: ../libnautilus-private/nautilus-autorun.c:520
 msgid "Do Nothing"
@@ -1553,7 +1554,7 @@ msgstr "_Nasc Anseo"
 
 #: ../libnautilus-private/nautilus-dnd.c:791
 msgid "Set as _Background"
-msgstr "Socraigh Mar _Cúlra"
+msgstr "Socraigh Mar _Chúlra"
 
 #: ../libnautilus-private/nautilus-dnd.c:798
 #: ../libnautilus-private/nautilus-dnd.c:851
@@ -1562,11 +1563,11 @@ msgstr "Cealaigh"
 
 #: ../libnautilus-private/nautilus-dnd.c:839
 msgid "Set as background for _all folders"
-msgstr "Cuir mar an cÃºlra le haighaidh g_ach comhadlann "
+msgstr "Socraigh mar chúlra do _gach fillteán"
 
 #: ../libnautilus-private/nautilus-dnd.c:844
 msgid "Set as background for _this folder"
-msgstr "Cuir mar an cÃºlra le haighaidh an comhadlann _seo"
+msgstr "Socraigh mar chúlra don fhillteán _seo"
 
 #: ../libnautilus-private/nautilus-emblem-utils.c:209
 #: ../libnautilus-private/nautilus-emblem-utils.c:214
@@ -1881,7 +1882,7 @@ msgstr[4] ""
 #, c-format
 msgid "%'d file left to delete"
 msgid_plural "%'d files left to delete"
-msgstr[0] "fillteán amháin roghnaithe"
+msgstr[0] "%'d chomhad fágtha le scriosadh"
 msgstr[1] "%'d chomhad fágtha le scriosadh"
 msgstr[2] "%'d chomhad fágtha le scriosadh"
 msgstr[3] "%'d gcomhad fágtha le scriosadh"
@@ -1889,7 +1890,7 @@ msgstr[4] "%'d comhad fágtha le scriosadh"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1396
 msgid "Deleting files"
-msgstr "Ag Scríos comhadaí"
+msgstr "Comhaid á scriosadh"
 
 #. To translators: %T will expand to a time like "2 minutes".
 #. * The singular/plural form will be used depending on the remaining time (i.e. the %T argument).
@@ -1897,11 +1898,11 @@ msgstr "Ag Scríos comhadaí"
 #: ../libnautilus-private/nautilus-file-operations.c:1410
 msgid "%T left"
 msgid_plural "%T left"
-msgstr[0] ""
-msgstr[1] ""
-msgstr[2] ""
-msgstr[3] ""
-msgstr[4] ""
+msgstr[0] "%T fágtha"
+msgstr[1] "%T fágtha"
+msgstr[2] "%T fágtha"
+msgstr[3] "%T fágtha"
+msgstr[4] "%T fágtha"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1477
 #: ../libnautilus-private/nautilus-file-operations.c:1511
@@ -1909,7 +1910,7 @@ msgstr[4] ""
 #: ../libnautilus-private/nautilus-file-operations.c:1627
 #: ../libnautilus-private/nautilus-file-operations.c:2381
 msgid "Error while deleting."
-msgstr "Earraidh ag dealaigh."
+msgstr "Earráid agus á scriosadh."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1481
 msgid ""
@@ -2407,7 +2408,7 @@ msgstr "Earráid agus comhad %B á chruthú."
 #: ../libnautilus-private/nautilus-file-operations.c:5798
 #, c-format
 msgid "There was an error creating the directory in %F."
-msgstr "Tharla earráid ag cruthú an chomhadlann i %F."
+msgstr "Tharla earráid agus an chomhadlann á cruthú i %F."
 
 #: ../libnautilus-private/nautilus-file-operations.c:6099
 #: ../libnautilus-private/nautilus-file-operations.c:6140
@@ -3137,7 +3138,7 @@ msgstr ""
 msgid "Default"
 msgstr "Réamhshocrú"
 
-#: ../libnautilus-private/nautilus-mime-application-chooser.c:264
+#: ../libnautilus-private/nautilus-mime-application-chooser.c:265
 msgid "Icon"
 msgstr "Deilbhín"
 
@@ -3388,7 +3389,7 @@ msgstr "Athraigh oibriú agus cuma fuinneoga bhainisteoir comhad"
 
 #: ../data/nautilus-file-management-properties.desktop.in.in.h:2
 msgid "File Management"
-msgstr "Bainistíocht Chomhad"
+msgstr "Bainistíocht Comhad"
 
 #: ../data/nautilus-home.desktop.in.in.h:1
 #: ../src/file-manager/fm-tree-view.c:1377
@@ -3428,7 +3429,7 @@ msgstr "Cruthaigh _Tosaitheoir"
 #: ../src/file-manager/fm-desktop-icon-view.c:721
 #: ../src/file-manager/fm-directory-view.c:6916
 msgid "Create a new launcher"
-msgstr ""
+msgstr "Cruthaigh tosaitheoir nua"
 
 #. label, accelerator
 #: ../src/file-manager/fm-desktop-icon-view.c:726
@@ -3483,7 +3484,7 @@ msgstr[4] ""
 
 #: ../src/file-manager/fm-directory-view.c:1138
 #: ../src/file-manager/fm-properties-window.c:5455
-#: ../src/nautilus-connect-server-dialog.c:341
+#: ../src/nautilus-connect-server-dialog.c:344
 #: ../src/nautilus-location-dialog.c:108
 msgid "There was an error displaying help."
 msgstr ""
@@ -3505,7 +3506,7 @@ msgid "Search _name:"
 msgstr "_Ainm cuardaigh:"
 
 #: ../src/file-manager/fm-directory-view.c:1308
-#: ../src/nautilus-connect-server-dialog.c:518
+#: ../src/nautilus-connect-server-dialog.c:521
 msgid "_Folder:"
 msgstr "_Fillteán:"
 
@@ -3788,7 +3789,7 @@ msgstr "Cruthaigh F_illteán"
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6906
 msgid "Create a new empty folder inside this folder"
-msgstr ""
+msgstr "Cruthaigh fillteán folamh nua san fhillteán seo"
 
 #. name, stock id, label
 #: ../src/file-manager/fm-directory-view.c:6908
@@ -4356,7 +4357,7 @@ msgstr[4] "Bog na míreanna roghnaithe amach as an mbruscar"
 #: ../src/file-manager/fm-directory-view.c:7858
 #: ../src/file-manager/fm-directory-view.c:7862
 msgid "Start the select drive"
-msgstr ""
+msgstr "Tosaigh an tiomántán roghnaithe"
 
 #: ../src/file-manager/fm-directory-view.c:7866
 #: ../src/file-manager/fm-directory-view.c:8068
@@ -4376,12 +4377,12 @@ msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:7873
 msgid "U_nlock Drive"
-msgstr ""
+msgstr "Díghl_asáil Tiomántán"
 
 #: ../src/file-manager/fm-directory-view.c:7874
 #: ../src/file-manager/fm-directory-view.c:8076
 msgid "Unlock the selected drive"
-msgstr ""
+msgstr "Díghlasáil an tiomántán roghnaithe"
 
 #: ../src/file-manager/fm-directory-view.c:7887
 msgid "Stop the selected drive"
@@ -4397,7 +4398,7 @@ msgstr "Bain Tiomántán go _Sábháilte"
 #: ../src/file-manager/fm-directory-view.c:7891
 #: ../src/file-manager/fm-directory-view.c:8093
 msgid "Safely remove the selected drive"
-msgstr ""
+msgstr "Bain an tiomántán roghnaithe go sábháilte"
 
 #: ../src/file-manager/fm-directory-view.c:7894
 #: ../src/file-manager/fm-directory-view.c:7986
@@ -4408,7 +4409,7 @@ msgstr "_Dínasc"
 #: ../src/file-manager/fm-directory-view.c:7895
 #: ../src/file-manager/fm-directory-view.c:8097
 msgid "Disconnect the selected drive"
-msgstr ""
+msgstr "Dínasc an tiomántán roghnaithe"
 
 #: ../src/file-manager/fm-directory-view.c:7898
 #: ../src/file-manager/fm-directory-view.c:7990
@@ -4426,7 +4427,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:8104
 #: ../src/nautilus-places-sidebar.c:1430
 msgid "_Lock Drive"
-msgstr ""
+msgstr "Cuir Tiomántán Faoi _Ghlas"
 
 #: ../src/file-manager/fm-directory-view.c:7903
 #: ../src/file-manager/fm-directory-view.c:8105
@@ -5445,59 +5446,59 @@ msgstr "WebDAV (HTTP)"
 msgid "Secure WebDAV (HTTPS)"
 msgstr "WebDAV Daingean (HTTPS)"
 
-#: ../src/nautilus-connect-server-dialog.c:193
+#: ../src/nautilus-connect-server-dialog.c:185
 msgid "Cannot Connect to Server. You must enter a name for the server."
 msgstr ""
 
-#: ../src/nautilus-connect-server-dialog.c:194
+#: ../src/nautilus-connect-server-dialog.c:186
 msgid "Please enter a name and try again."
 msgstr ""
 
-#: ../src/nautilus-connect-server-dialog.c:424
+#: ../src/nautilus-connect-server-dialog.c:427
 msgid "_Location (URI):"
 msgstr "_Suíomh (URI):"
 
-#: ../src/nautilus-connect-server-dialog.c:446
+#: ../src/nautilus-connect-server-dialog.c:449
 msgid "_Server:"
 msgstr "_Freastalaí:"
 
-#: ../src/nautilus-connect-server-dialog.c:465
+#: ../src/nautilus-connect-server-dialog.c:468
 msgid "Optional information:"
 msgstr "Eolas breise:"
 
-#: ../src/nautilus-connect-server-dialog.c:477
+#: ../src/nautilus-connect-server-dialog.c:480
 msgid "_Share:"
 msgstr "Comh_roinnt:"
 
-#: ../src/nautilus-connect-server-dialog.c:498
+#: ../src/nautilus-connect-server-dialog.c:501
 msgid "_Port:"
 msgstr "_Port:"
 
-#: ../src/nautilus-connect-server-dialog.c:538
+#: ../src/nautilus-connect-server-dialog.c:541
 msgid "_User Name:"
 msgstr "_Ainm ú_sáideora:"
 
-#: ../src/nautilus-connect-server-dialog.c:559
+#: ../src/nautilus-connect-server-dialog.c:562
 msgid "_Domain Name:"
 msgstr "Ainm f_earainn:"
 
-#: ../src/nautilus-connect-server-dialog.c:591
+#: ../src/nautilus-connect-server-dialog.c:594
 msgid "Bookmark _name:"
 msgstr "_Ainm leabharmhairc:"
 
-#: ../src/nautilus-connect-server-dialog.c:787
+#: ../src/nautilus-connect-server-dialog.c:790
 msgid "Connect to Server"
 msgstr "Nasc le Freastalaí"
 
-#: ../src/nautilus-connect-server-dialog.c:804
+#: ../src/nautilus-connect-server-dialog.c:807
 msgid "Service _type:"
 msgstr "Ci_neál seirbhíse:"
 
-#: ../src/nautilus-connect-server-dialog.c:900
+#: ../src/nautilus-connect-server-dialog.c:903
 msgid "Add _bookmark"
 msgstr "Cuir _leabharmharc leis"
 
-#: ../src/nautilus-connect-server-dialog.c:938
+#: ../src/nautilus-connect-server-dialog.c:941
 msgid "C_onnect"
 msgstr "_Nasc"
 
@@ -5667,7 +5668,7 @@ msgstr "<b>Réamhshocruithe Amhairc Crainn</b>"
 
 #: ../src/nautilus-file-management-properties.ui.h:42
 msgid "A_ll columns have the same width"
-msgstr ""
+msgstr "Tá an _leithead céanna ag gach colún"
 
 #: ../src/nautilus-file-management-properties.ui.h:43
 msgid "Acti_on:"
@@ -5683,11 +5684,11 @@ msgstr "Oscail i bhfuinneoga _brabhsála i gcónaí"
 
 #: ../src/nautilus-file-management-properties.ui.h:46
 msgid "Ask before _emptying the Trash or deleting files"
-msgstr "Fiafraigh roimh an Bruscar a fholmhú nó comhaid a scriosadh"
+msgstr "Fiafraigh roimh an Bruscar a fholmhú nó comhaid a _scriosadh"
 
 #: ../src/nautilus-file-management-properties.ui.h:47
 msgid "B_rowse media when inserted"
-msgstr ""
+msgstr "B_rábhsáil meáin agus ionsáite"
 
 #: ../src/nautilus-file-management-properties.ui.h:48
 msgid "Behavior"
@@ -5702,15 +5703,19 @@ msgid ""
 "Choose the order of information to appear beneath icon names. More "
 "information will appear when zooming in closer."
 msgstr ""
+"Roghnaigh ord taispeána eolais faoi ainmneacha deilbhíní. Taispeántar eolas "
+"breise agus á shúmáil isteach."
 
 #: ../src/nautilus-file-management-properties.ui.h:56
 msgid "Choose the order of information to appear in the list view."
-msgstr ""
+msgstr "Roghnaigh ord taispeána eolais don amharc liosta."
 
 #: ../src/nautilus-file-management-properties.ui.h:57
 msgid ""
 "Choose what happens when inserting media or connecting devices to the system"
 msgstr ""
+"Roghnaigh cad a tharlaíonn agus meáin á n-ionsá nó gléasanna á nasc leis an "
+"gcóras"
 
 #: ../src/nautilus-file-management-properties.ui.h:59
 msgid "Count _number of items:"
@@ -5718,7 +5723,7 @@ msgstr "Comhair _líon míreanna:"
 
 #: ../src/nautilus-file-management-properties.ui.h:60
 msgid "D_efault zoom level:"
-msgstr "L_eibhéal súmála réamhshocraithe:"
+msgstr "Lei_bhéal súmála réamhshocraithe:"
 
 #: ../src/nautilus-file-management-properties.ui.h:61
 msgid "Default _zoom level:"
@@ -5738,7 +5743,7 @@ msgstr "Cuimsi_gh ordú Scrios a sheachthreorú Bruscar"
 
 #: ../src/nautilus-file-management-properties.ui.h:66
 msgid "Less common media formats can be configured here"
-msgstr ""
+msgstr "Is féidir formáidí níos lú coitianta a chumrú anseo"
 
 #: ../src/nautilus-file-management-properties.ui.h:67
 msgid "List Columns"
@@ -5802,7 +5807,7 @@ msgstr "Físeán _DVD:"
 
 #: ../src/nautilus-file-management-properties.ui.h:84
 msgid "_Default zoom level:"
-msgstr "Leibhéal súmáil réamhshocraithe:"
+msgstr "Leibhéal súmála _réamhshocraithe:"
 
 #: ../src/nautilus-file-management-properties.ui.h:85
 msgid "_Double click to open items"
@@ -5814,11 +5819,11 @@ msgstr "_Formáid:"
 
 #: ../src/nautilus-file-management-properties.ui.h:87
 msgid "_Music Player:"
-msgstr ""
+msgstr "_Seinnteoir Ceoil:"
 
 #: ../src/nautilus-file-management-properties.ui.h:88
 msgid "_Never prompt or start programs on media insertion"
-msgstr ""
+msgstr "_Ná fiafraigh nó tosaigh cláir riamh agus meáin ionsáite"
 
 #: ../src/nautilus-file-management-properties.ui.h:89
 msgid "_Only for files smaller than:"
@@ -5850,7 +5855,7 @@ msgstr "_Cineál:"
 
 #: ../src/nautilus-file-management-properties.ui.h:96
 msgid "_Use compact layout"
-msgstr "Ú_sáid dlúthleagan amach"
+msgstr "Úsáid dlúthl_eagan amach"
 
 #: ../src/nautilus-file-management-properties.ui.h:97
 msgid "_View executable text files when they are opened"
@@ -6779,6 +6784,10 @@ msgid ""
 "Software Foundation; either version 2 of the License, or (at your option) "
 "any later version."
 msgstr ""
+"Is bogearraí saor é Nautilus; is féidir leat é a athdháileadh nó a athrú "
+"faoi théarmaí an GNU General Public License mar foilsíodh é ag an Free "
+"Software Foundation; leagan 2 an License, nó (de do rogha) aon leagan níos "
+"déanaí."
 
 #: ../src/nautilus-window-menus.c:503
 msgid ""
@@ -6787,6 +6796,9 @@ msgid ""
 "FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more "
 "details."
 msgstr ""
+"Dáileadh Nautilus le súil go mbeidh sé úsáideach, ach GAN AON BHARÁNTA; gan "
+"an baránta intuigthe INDÍOLTÓIREACHTA nó OIRIÚNACHTA D'FHEIDHM ÁIRITHE fiú. "
+"Féach an GNU General Public License le haghaidh tuilleadh mionsonraí."
 
 #: ../src/nautilus-window-menus.c:507
 msgid ""
@@ -6794,6 +6806,9 @@ msgid ""
 "Nautilus; if not, write to the Free Software Foundation, Inc., 51 Franklin "
 "Street, Fifth Floor, Boston, MA 02110-1301 USA"
 msgstr ""
+"Ba chóir go bhfuair tú cóip an GNU General Public License in éineacht le "
+"Nautilus; mura bhfuair tú é, scríobh chuig an Free Software Foundation, "
+"Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301 USA."
 
 #: ../src/nautilus-window-menus.c:519
 msgid ""
