Updated Arabic translation

--- a/po/ar.po
+++ b/po/ar.po
@@ -22,7 +22,7 @@ msgstr ""
 "Project-Id-Version: nautilus.HEAD\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-08-06 13:24+0300\n"
-"PO-Revision-Date: 2009-08-06 13:26+0300\n"
+"PO-Revision-Date: 2009-08-08 17:14+0300\n"
 "Last-Translator: Khaled Hosny <khaledhosny@eglug.org>\n"
 "Language-Team: Arabic <doc@arabeyes.org>\n"
 "Language: ar\n"
@@ -6355,12 +6355,12 @@ msgstr "ا_ذهب"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:771
 msgid "_Bookmarks"
-msgstr "ال_علامات"
+msgstr "_علامات"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:772
 msgid "_Tabs"
-msgstr "الأ_لسنة"
+msgstr "أ_لسنة"
 
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:773
@@ -6401,7 +6401,7 @@ msgstr "أغلق جميع نوافذ الإبحار"
 #. name, stock id, label
 #: ../src/nautilus-navigation-window-menus.c:785
 msgid "_Location..."
-msgstr "ال_مكان..."
+msgstr "_مكان..."
 
 #: ../src/nautilus-navigation-window-menus.c:786
 #: ../src/nautilus-spatial-window.c:925
@@ -6914,7 +6914,7 @@ msgstr "نوتلس"
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:923
 msgid "_Places"
-msgstr "ال_أماكن"
+msgstr "أ_ماكن"
 
 #. name, stock id, label
 #: ../src/nautilus-spatial-window.c:924
