Updating Estonian translation

--- a/po/et.po
+++ b/po/et.po
@@ -23,7 +23,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-07-21 14:59+0000\n"
-"PO-Revision-Date: 2009-07-27 13:03+0300\n"
+"PO-Revision-Date: 2009-08-06 18:23+0300\n"
 "Last-Translator: Ivar Smolin <okul@linux.ee>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
@@ -4093,7 +4093,7 @@ msgid "Owner:"
 msgstr "Omanik:"
 
 msgid "_Group:"
-msgstr "_Grupp:"
+msgstr "G_rupp:"
 
 msgid "Group:"
 msgstr "Grupp:"
