--- a/po/et.po
+++ b/po/et.po
@@ -22,9 +22,9 @@ msgstr ""
 "Project-Id-Version: nautilus HEAD\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-07-21 14:59+0000\n"
-"PO-Revision-Date: 2009-08-06 18:23+0300\n"
-"Last-Translator: Ivar Smolin <okul@linux.ee>\n"
+"POT-Creation-Date: 2009-08-10 18:19+0000\n"
+"PO-Revision-Date: 2009-08-10 21:38+0300\n"
+"Last-Translator: Mattias Põldaru <mahfiaz gmail com>\n"
 "Language-Team: Estonian <gnome-et@linux.ee>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1706,6 +1706,12 @@ msgstr ""
 msgid "The file \"%B\" cannot be moved to the trash."
 msgstr "Faili \"%B\" pole võimalik prügikasti visata."
 
+msgid "Trashing Files"
+msgstr "Failide viskamine prügikasti"
+
+msgid "Deleting Files"
+msgstr "Failide kustutamine"
+
 msgid "Unable to eject %V"
 msgstr "%V väljastamine pole võimalik"
 
@@ -1970,6 +1976,9 @@ msgstr "%F all juba olemasolevat sama nimega faili pole võimalik eemaldada."
 msgid "There was an error copying the file into %F."
 msgstr "Faili kopeerimisel %F alla tekkis viga."
 
+msgid "Copying Files"
+msgstr "Failide kopeerimine"
+
 msgid "Preparing to Move to \"%B\""
 msgstr "Ettevalmistused ümbertõstmiseks sihtkohta \"%B\""
 
@@ -1991,6 +2000,9 @@ msgstr ""
 #, c-format
 msgid "There was an error moving the file into %F."
 msgstr "Faili ümbertõstmisel %F alla tekkis viga."
+
+msgid "Moving Files"
+msgstr "Failide liigutamine"
 
 msgid "Creating links in \"%B\""
 msgstr "\"%B\" alla viitade loomine"
@@ -2034,6 +2046,9 @@ msgstr "Viga faili %B loomisel."
 #, c-format
 msgid "There was an error creating the directory in %F."
 msgstr "%F sisse kataloogi loomisel tekkis viga."
+
+msgid "Emptying Trash"
+msgstr "Prügikasti tühjendamine"
 
 msgid "Unable to mark launcher trusted (executable)"
 msgstr ""
