--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Major changes in 2.27.91 are:
+* Migrate old-style nautilus metadata to gvfs metadata
+* Fix viewing of very small image files
+* Respect disable_command_line option
+* Reverse mouse button used for back/forward to same as firefox
+* Always show menu icons for menu items representing files
+* Inhibit suspend during file operations
+* Cancel audio preview when deleting the previewed file
+
 Major changes in 2.27.4 are:
 * Add support for starting and stopping drives
 * Use the new GVfs metadata framework
