--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,10 @@
+Major changes in 2.27.92 are:
+* Fix crash on logout
+* Translation updates
+* Always show app icon in open with popup menu
+* fix duplicate id in ui file
+* Fix warning in new power manager inhibiting
+
 Major changes in 2.27.91 are:
 * Migrate old-style nautilus metadata to gvfs metadata
 * Fix viewing of very small image files
