--- a/po/br.po
+++ b/po/br.po
@@ -9,8 +9,8 @@ msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-07-30 10:12+0000\n"
-"PO-Revision-Date: 2009-07-31 09:48+0100\n"
-"Last-Translator: Denis <denisarnuad@yahoo.fr>\n"
+"PO-Revision-Date: 2009-09-09 12:27+0100\n"
+"Last-Translator: Denis\n"
 "Language-Team: Breton <br@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -364,9 +364,8 @@ msgid "Image/label border"
 msgstr "Riblenn ar skeudenn/skritellig"
 
 #: ../eel/eel-alert-dialog.c:110
-#, fuzzy
 msgid "Width of border around the label and image in the alert dialog"
-msgstr "Led ar riblenn tro dro d'ar skrittelig per ar skeudenn er voestad-emziviz galv diwall"
+msgstr ""
 
 #: ../eel/eel-alert-dialog.c:119
 msgid "Alert Type"
@@ -470,7 +469,7 @@ msgstr ""
 
 #: ../eel/eel-vfs-extensions.c:92
 msgid " (invalid Unicode)"
-msgstr ""
+msgstr " (Unicode didalvoudek)"
 
 #. Translators: date_modified - mtime, the last time file contents were changed
 #. date_changed  - ctime, the last time file meta-information changed
@@ -1092,7 +1091,7 @@ msgstr "Digeriñ %s"
 
 #: ../libnautilus-private/nautilus-autorun.c:606
 msgid "Open with other Application..."
-msgstr ""
+msgstr "Digeriñ gant un arload _all..."
 
 #: ../libnautilus-private/nautilus-autorun.c:940
 msgid "You have just inserted an Audio CD."
@@ -1499,7 +1498,7 @@ msgstr[1] "%'d eurvezh"
 #: ../src/file-manager/fm-directory-view.c:10070
 #, c-format
 msgid "Link to %s"
-msgstr ""
+msgstr "Ere ouzh %s"
 
 #. appended to new link file
 #: ../libnautilus-private/nautilus-file-operations.c:377
@@ -1665,7 +1664,7 @@ msgstr "Goullonderiñ al las_tez"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1344
 msgid "Are you sure you want to permanently delete \"%B\"?"
-msgstr ""
+msgstr "Ha sur oc'h e fell deoc'h dilemel \"%s\" da viken ?"
 
 #: ../libnautilus-private/nautilus-file-operations.c:1347
 #, c-format
@@ -1752,7 +1751,7 @@ msgstr "N'hell ket kas ar restr d'al Lastez, ha fellout a ra deoc'h diverkañ an
 
 #: ../libnautilus-private/nautilus-file-operations.c:1761
 msgid "The file \"%B\" cannot be moved to the trash."
-msgstr ""
+msgstr "Ar restr \"%s\" n'hell ket bezañ kaset d'al lastez."
 
 #: ../libnautilus-private/nautilus-file-operations.c:1994
 msgid "Unable to eject %V"
@@ -2374,7 +2373,7 @@ msgstr "%"
 #: ../libnautilus-private/nautilus-file.c:5782
 #, c-format
 msgid "%s (%s bytes)"
-msgstr ""
+msgstr "%s (%s eizhbit)"
 
 #. This means no contents at all were readable
 #: ../libnautilus-private/nautilus-file.c:6086
@@ -3012,7 +3011,7 @@ msgstr[1] ""
 #: ../libnautilus-private/nautilus-progress-info.c:495
 #: ../libnautilus-private/nautilus-progress-info.c:513
 msgid "Preparing"
-msgstr ""
+msgstr "O prientiñ"
 
 #: ../libnautilus-private/nautilus-query.c:135
 #: ../libnautilus-private/nautilus-search-directory-file.c:166
@@ -3588,7 +3587,7 @@ msgstr ""
 #. label, accelerator
 #: ../src/file-manager/fm-directory-view.c:6981
 msgid "_Invert Selection"
-msgstr ""
+msgstr "Tuginañ an diuzad"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:6982
@@ -3738,10 +3737,9 @@ msgstr "Mentrezhañ an trevnad diuzet er-maez"
 #: ../src/file-manager/fm-directory-view.c:8063
 #: ../src/nautilus-places-sidebar.c:1410
 #: ../src/nautilus-places-sidebar.c:2230
-#, fuzzy
 #| msgid "_Software:"
 msgid "_Start"
-msgstr "_Meziantoù :"
+msgstr "_Loc'hañ"
 
 #. tooltip
 #: ../src/file-manager/fm-directory-view.c:7044
@@ -3984,13 +3982,11 @@ msgstr[1] ""
 
 #: ../src/file-manager/fm-directory-view.c:7858
 #: ../src/file-manager/fm-directory-view.c:7862
-#, fuzzy
 msgid "Start the select drive"
-msgstr "Kregiñ gant an trevnad diuze"
+msgstr "Kregiñ gant an trevnad diuzet"
 
 #: ../src/file-manager/fm-directory-view.c:7866
 #: ../src/file-manager/fm-directory-view.c:8068
-#, fuzzy
 msgid "Connect to the selected drive"
 msgstr "Kennaskañ ouzh an trevnad diuzet"
 
@@ -4011,7 +4007,6 @@ msgstr ""
 
 #: ../src/file-manager/fm-directory-view.c:7874
 #: ../src/file-manager/fm-directory-view.c:8076
-#, fuzzy
 msgid "Unlock the selected drive"
 msgstr "_Dibrennañ an trevnad diuzet"
 
@@ -4035,7 +4030,7 @@ msgstr ""
 #: ../src/file-manager/fm-directory-view.c:7986
 #: ../src/file-manager/fm-directory-view.c:8096
 msgid "_Disconnect"
-msgstr ""
+msgstr "_Digennaskañ"
 
 #: ../src/file-manager/fm-directory-view.c:7895
 #: ../src/file-manager/fm-directory-view.c:8097
@@ -4113,10 +4108,9 @@ msgstr "Furchal er reizhiad restroù gant an ardoer restroù"
 
 #: ../src/file-manager/fm-directory-view.c:8060
 #: ../src/file-manager/fm-directory-view.c:8064
-#, fuzzy
 #| msgid "Format the selected volume"
 msgid "Start the selected drive"
-msgstr "Mentrezhañ an trevnad diuzet er-maez"
+msgstr "Loc'añ an trevnad diuzet"
 
 #. add the "open in new window" menu item
 #: ../src/file-manager/fm-directory-view.c:8174
@@ -4438,9 +4432,8 @@ msgstr ""
 #. name, stock id
 #. label, accelerator
 #: ../src/file-manager/fm-icon-view.c:1509
-#, fuzzy
 msgid "Re_versed Order"
-msgstr "Urzh _kontrol"
+msgstr ""
 
 #. tooltip
 #: ../src/file-manager/fm-icon-view.c:1510
@@ -4714,7 +4707,7 @@ msgstr "Kemmet :"
 
 #: ../src/file-manager/fm-properties-window.c:3338
 msgid "Free space:"
-msgstr ""
+msgstr "Egor dieub :"
 
 #: ../src/file-manager/fm-properties-window.c:3448
 #: ../src/nautilus-emblem-sidebar.c:1032
@@ -5416,7 +5409,7 @@ msgstr "_Mentrezh :"
 
 #: ../src/nautilus-file-management-properties.ui.h:87
 msgid "_Music Player:"
-msgstr ""
+msgstr "Le_nner sonerezh :"
 
 #: ../src/nautilus-file-management-properties.ui.h:88
 msgid "_Never prompt or start programs on media insertion"
@@ -5428,7 +5421,7 @@ msgstr "Hepken evit restroù bihanoc'h eget:"
 
 #: ../src/nautilus-file-management-properties.ui.h:90
 msgid "_Photos:"
-msgstr ""
+msgstr "_Luc'hskeudennoù :"
 
 #: ../src/nautilus-file-management-properties.ui.h:91
 msgid "_Run executable text files when they are opened"
@@ -5517,11 +5510,11 @@ msgstr "Meziant"
 
 #: ../src/nautilus-image-properties-page.c:310
 msgid "Keywords"
-msgstr ""
+msgstr "Gerioù alc'hwez"
 
 #: ../src/nautilus-image-properties-page.c:311
 msgid "Creator"
-msgstr ""
+msgstr "Krouer"
 
 #: ../src/nautilus-image-properties-page.c:312
 msgid "Copyright"
@@ -5529,7 +5522,7 @@ msgstr "Copyright"
 
 #: ../src/nautilus-image-properties-page.c:313
 msgid "Rating"
-msgstr ""
+msgstr "Notenn"
 
 #: ../src/nautilus-image-properties-page.c:337
 msgid "Image Type:"
@@ -5951,9 +5944,9 @@ msgid "Unable to poll %s for media changes"
 msgstr ""
 
 #: ../src/nautilus-places-sidebar.c:2061
-#, fuzzy, c-format
+#, c-format
 msgid "Unable to stop %s"
-msgstr "N'haller ket kas %s er-maez"
+msgstr ""
 
 #: ../src/nautilus-places-sidebar.c:2174
 msgid "Remove"
