Updated Finnish translation

--- a/po/fi.po
+++ b/po/fi.po
@@ -19,16 +19,12 @@
 #
 # script = komentojono
 #
-# Copyright (C) 2002 Free Software Foundation, Inc.
-# Pauli Virtanen <pauli.virtanen@hut.fi>, 2000-2005.
-# Ilkka Tuohela <hile@iki.fi>, 2005-2009.
-#
 msgid ""
 msgstr ""
 "Project-Id-Version: nautilus\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2009-09-15 16:15+0300\n"
-"PO-Revision-Date: 2009-09-15 16:20+0300\n"
+"PO-Revision-Date: 2009-09-15 16:30+0300\n"
 "Last-Translator: Ilkka Tuohela <hile@hut.fi>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -732,6 +728,8 @@ msgid ""
 "will determine if any action is taken inside of Nautilus when either is "
 "pressed."
 msgstr ""
+"Jos käyttäjän hiiressä on \"Eteenpäin\"- ja \"Taaksepäin\"-napit, tämä "
+"avain määrittää mitä tapahtuu painettaessa näitä nappeja nautiluksessa."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:44
 msgid ""
@@ -739,6 +737,9 @@ msgid ""
 "will set which button activates the \"Back\" command in a browser window. "
 "Possible values range between 6 and 14."
 msgstr ""
+"Jos käyttäjän hiiressä on \"Eteenpäin\"- ja \"Taaksepäin\"-napit, tämä "
+"avain määrittää mikä nappi käynnistää \"Takaisin\"-komennon selainikkunassa. "
+"Mahdolliset arvot ovat väliltä 6-14."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:45
 msgid ""
@@ -746,6 +747,9 @@ msgid ""
 "will set which button activates the \"Forward\" command in a browser window. "
 "Possible values range between 6 and 14."
 msgstr ""
+"Jos käyttäjän hiiressä on \"Eteenpäin\"- ja \"Taaksepäin\"-napit, tämä "
+"avain määrittää mikä nappi käynnistää \"Eteenpäin\"-komennon selainikkunassa. "
+"Mahdolliset arvot ovat väliltä 6-14."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:46
 msgid "Home icon visible on desktop"
@@ -850,6 +854,10 @@ msgid ""
 "window, so nautilus can serve as a daemon to monitor media automount, or "
 "similar tasks."
 msgstr ""
+"Jos tosi, Nautilus suljetaan kokonaan kun viimeinen ikkuna suljetaan. Tämä "
+"on oletusasetus. Jos arvo on epätosi, se voidaan käynnistää ilman ikkuna, "
+"jolloin nautilus voi toimia palvelinprosessina median liittämiseksi ja "
+"muille vastaaville tehtäville."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:61
 msgid ""
@@ -1395,6 +1403,9 @@ msgid ""
 "Whether to show the user a package installer dialog in case an unknown mime "
 "type is opened, in order to search for an application to handle it."
 msgstr ""
+"Näytetäänkö käyttäjälle pakettien asennusikkuna yritettäessä avata "
+"tuntemattoman MIME-tyypin mukainen kohde, jotta tälle tyypille voidaan "
+"etsiä käsittelevää sen sovellusta."
 
 #: ../libnautilus-private/apps_nautilus_preferences.schemas.in.h:154
 msgid "Width of the side pane"
