Update for 2.28.0 release

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+Major changes in 2.28.0 are:
+* Translation updates
+* Don't load non-images for thumbnailing when zoomed
+* Made desktop window a native X window for nicer redrawing
+* Fix leaks
+
 Major changes in 2.27.92 are:
 * Fix crash on logout
 * Translation updates
