Prepare for 2.26.4 release.

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+Major changes in 2.26.4 are:
+* New translations
+* Fixed a crash in the preferences dialog
+
 Major changes in 2.26.3 are:
 * New translations
 * Allow shift+return during typeahead find
