Updated Japanese translation

--- a/po/ja.po
+++ b/po/ja.po
@@ -17,8 +17,8 @@ msgstr ""
 "Project-Id-Version: nautilus master\n"
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-09-19 00:05+0900\n"
-"PO-Revision-Date: 2009-09-19 01:12+0900\n"
+"POT-Creation-Date: 2009-09-23 22:25+0900\n"
+"PO-Revision-Date: 2009-09-23 22:29+0900\n"
 "Last-Translator: Takayuki KUSANO <AE5T-KSN@asahi-net.or.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -1481,7 +1481,7 @@ msgstr "ピクチャー CD を挿入しました。"
 
 #: ../libnautilus-private/nautilus-autorun.c:962
 msgid "You have just inserted a medium with digital photos."
-msgstr "デジタル・フォトが入ったメディアを挿入しました。"
+msgstr "デジタル写真が入ったメディアを挿入しました。"
 
 #: ../libnautilus-private/nautilus-autorun.c:964
 msgid "You have just inserted a digital audio player."
@@ -5934,7 +5934,7 @@ msgstr "ファイルの最大サイズ(_O):"
 
 #: ../src/nautilus-file-management-properties.ui.h:90
 msgid "_Photos:"
-msgstr "フォト(_P):"
+msgstr "写真(_P):"
 
 #: ../src/nautilus-file-management-properties.ui.h:91
 msgid "_Run executable text files when they are opened"
