--- a/po/ja.po
+++ b/po/ja.po
@@ -18,7 +18,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?"
 "product=nautilus&component=Internationalization (i18n)\n"
 "POT-Creation-Date: 2009-09-23 22:25+0900\n"
-"PO-Revision-Date: 2009-09-23 22:29+0900\n"
+"PO-Revision-Date: 2009-09-23 23:19+0900\n"
 "Last-Translator: Takayuki KUSANO <AE5T-KSN@asahi-net.or.jp>\n"
 "Language-Team: Japanese <gnome-translation@gnome.gr.jp>\n"
 "MIME-Version: 1.0\n"
@@ -7182,7 +7182,7 @@ msgstr "これらのファイルはピクチャー CD にあります。"
 
 #: ../src/nautilus-x-content-bar.c:82
 msgid "The media contains digital photos."
-msgstr "これらのファイルはデジタル写真にあります。"
+msgstr "このメディアにはデジタル写真が含まれています。"
 
 #: ../src/nautilus-x-content-bar.c:84
 msgid "These files are on a digital audio player."
