Updated Greek translation.

--- a/po/el.po
+++ b/po/el.po
@@ -63,10 +63,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: el\n"
-"Report-Msgid-Bugs-To: http://bugzilla.gnome.org/enter_bug.cgi?product=nautilus&component=Internationalization (i18n)\n"
-"POT-Creation-Date: 2009-09-29 12:36+0000\n"
-"PO-Revision-Date: 2009-09-29 16:35+0200\n"
-"Last-Translator: nikosCharonitakis <nikosx@gmail.com>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2009-09-29 17:36+0300\n"
+"PO-Revision-Date: 2009-09-29 17:40+0200\n"
+"Last-Translator: Kostas Papadimas <pkst@gnome.org>\n"
 "Language-Team: Greek <team@gnome.gr>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -3050,53 +3050,46 @@ msgstr "Άν_οιγμα"
 #. first %s is a filename and second %s is a file extension
 #: ../libnautilus-private/nautilus-open-with-dialog.c:962
 #, c-format
-#| msgid "Open %s and other files of type \"%s\" with:"
 msgid "Open %s and other %s document with:"
-msgstr "Άνοιγμα %s και άλλων αρχείων %s  με:"
+msgstr "Άνοιγμα %s και άλλου  εγγράφου %s με:"
 
 #. the %s here is a file name
 #. %s is a filename
 #: ../libnautilus-private/nautilus-open-with-dialog.c:966
 #: ../libnautilus-private/nautilus-open-with-dialog.c:997
 #, c-format
-#| msgid "Open With"
 msgid "Open %s with:"
-msgstr "Άνοιγμα %s  με:"
+msgstr "Άνοιγμα %s με:"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:967
 #, c-format
-#| msgid "There is no application installed for %s files"
 msgid "_Remember this application for %s documents"
-msgstr "_Απομνημόνευση αυτής της εφαρμογής για έγγραφα %s"
+msgstr "Απομνη_μόνευση αυτής της εφαρμογή για έγγραφα %s"
 
 #. Only in add mode - the %s here is a file extension
 #: ../libnautilus-private/nautilus-open-with-dialog.c:976
 #, c-format
-#| msgid "Open all files of type \"%s\" with:"
 msgid "Open all %s documents with:"
-msgstr "Άνοιγμα όλων των αρχείων %s με:"
+msgstr "Άνοιγμα όλων των εγγράφων \"%s\" με:"
 
 #. First %s is a filename, second is a description
 #. * of the type, eg "plain text document"
 #: ../libnautilus-private/nautilus-open-with-dialog.c:993
 #, c-format
-#| msgid "Open %s and other files of type \"%s\" with:"
 msgid "Open %s and other \"%s\" files with:"
-msgstr "Άνοιγμα %s και άλλων αρχείων  \"%s\" με:"
+msgstr "Άνοιγμα %s και άλλων αρχείων του τύπου \"%s\" με:"
 
 #. %s is a file type description
 #: ../libnautilus-private/nautilus-open-with-dialog.c:999
 #, c-format
-#| msgid "There is no application installed for %s files"
 msgid "_Remember this application for \"%s\" files"
-msgstr "_Απομνημόνευση αυτής της εφαρμογής για αρχεία \"%s\""
+msgstr "Απομνη_μόνευση αυτής της εφαρμογή για αρχεία του  \"%s\" "
 
 #. Only in add mode
 #: ../libnautilus-private/nautilus-open-with-dialog.c:1008
 #, c-format
-#| msgid "Open all files of type \"%s\" with:"
 msgid "Open all \"%s\" files with:"
-msgstr "Άνοιγμα όλων των αρχείων  \"%s\" με:"
+msgstr "Άνοιγμα όλων των αρχείων του τύπου \"%s\" με:"
 
 #: ../libnautilus-private/nautilus-open-with-dialog.c:1019
 msgid "_Add"
@@ -6643,7 +6636,6 @@ msgstr ""
 " Κώστας Παπαδήμας <pkst@gnome.org>\n"
 " Πιέρρος Παπαδέας <ppapadeas@gmail.com>\n"
 " Τζένη Πετούμενου <epetoumenou@gmail.gr>\n"
-" Νίκος Χαρωνιτάκης <nikosx@gmail.com>\n"
 "\n"
 "Για περισσότερες πληροφορίες, επισκεφθείτε τη σελίδα http://www.gnome.gr/"
 
